--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,37 @@
    <link href="/css/style.css" rel="stylesheet">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container">
+    <a class="navbar-brand" href="#">TechStore</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Ana Sayfa</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Hakkında</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">İletişim</a>
+        </li>
+      </ul>
+      <div class="d-flex ms-auto" id="search-container">
+        <input class="form-control" type="search" placeholder="Ürün, kategori ve marka ara" aria-label="Search">
+      </div>
+    </div>
+  </div>
+</nav>
+
+
+  <div class="container">
+    <h1>Hoş Geldiniz!</h1>
+    <p>Burada ana sayfanızın içeriği yer alacak.</p>
+  </div>
+
 <div class="container-fluid text-center my-3">
     <div class="row">
         <div class="row mx-auto my-auto justify-content-center">
@@ -16,9 +47,10 @@
                     <div class="col-md-2">
                         <div class="card">
                             <div class="card-img">
-                               <img src="https://productimages.hepsiburada.net/s/552/424-600/110000613429777.jpg/format:webp" class="img-fluid">
+                               <img src="https://productimages.hepsiburada.net/s/777/424-600/110000767460737.jpg/format:webp" class="img-fluid">
+                                <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
+                               <div class="tooltip-box">Sepete ekle</div>
                             </div>
-                            <div class="card-img-overlay">Slide 1</div>
                         </div>
                     </div>
                 </div>
@@ -26,9 +58,10 @@
                     <div class="col-md-2">
                         <div class="card">
                             <div class="card-img">
-                                <img src="https://productimages.hepsiburada.net/s/552/424-600/110000613429777.jpg/format:webp" class="img-fluid">
+                                <img src="https://productimages.hepsiburada.net/s/777/424-600/110000805731086.jpg/format:webp" class="img-fluid">
+                                 <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
+                                <div class="tooltip-box">Sepete ekle</div>
                             </div>
-                            <div class="card-img-overlay">Slide 2</div>
                         </div>
                     </div>
                 </div>
@@ -36,7 +69,9 @@
                     <div class="col-md-2">
                         <div class="card">
                             <div class="card-img">
-                                <img src="https://productimages.hepsiburada.net/s/552/424-600/110000613429777.jpg/format:webp" class="img-fluid">
+                                <img src="https://productimages.hepsiburada.net/s/777/424-600/110000850441114.jpg/format:webp" class="img-fluid">
+                                 <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
+                                <div class="tooltip-box">Sepete ekle</div>
                             </div>
                             <div class="card-img-overlay">Slide 3</div>
                         </div>
@@ -46,7 +81,9 @@
                     <div class="col-md-2">
                         <div class="card">
                             <div class="card-img">
-                                <img src="https://productimages.hepsiburada.net/s/552/424-600/110000613429777.jpg/format:webp" class="img-fluid">
+                                <img src="https://productimages.hepsiburada.net/s/777/424-600/110000681644448.jpg/format:webp" class="img-fluid">
+                                <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
+                                <div class="tooltip-box">Sepete ekle</div>
                             </div>
                             <div class="card-img-overlay">Slide 4</div>
                         </div>
@@ -56,9 +93,71 @@
                     <div class="col-md-2">
                         <div class="card">
                             <div class="card-img">
-                                <img src="https://productimages.hepsiburada.net/s/552/424-600/110000613429777.jpg/format:webp" class="img-fluid">
+                                <img src="https://productimages.hepsiburada.net/s/777/424-600/110000760241894.jpg/format:webp" class="img-fluid">
+                                 <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
+                                <div class="tooltip-box">Sepete ekle</div>
                             </div>
                             <div class="card-img-overlay">Slide 5</div>
+                        </div>
+                    </div>
+                </div>
+                 <div class="carousel-item">
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="https://productimages.hepsiburada.net/s/777/424-600/110000650764406.jpg/format:webp" class="img-fluid">
+                                 <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
+                                <div class="tooltip-box">Sepete ekle</div>
+                            </div>
+                            <div class="card-img-overlay">Slide 6</div>
+                        </div>
+                    </div>
+                </div>
+                 <div class="carousel-item">
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="https://productimages.hepsiburada.net/s/777/424-600/110000734789901.jpg/format:webp" class="img-fluid">
+                                 <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
+                                <div class="tooltip-box">Sepete ekle</div>
+                            </div>
+                            <div class="card-img-overlay">Slide 7</div>
+                        </div>
+                    </div>
+                </div>
+                 <div class="carousel-item">
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="https://productimages.hepsiburada.net/s/777/424-600/110000650764406.jpg/format:webp" class="img-fluid">
+                                 <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
+                                <div class="tooltip-box">Sepete ekle</div>
+                            </div>
+                            <div class="card-img-overlay">Slide 8</div>
+                        </div>
+                    </div>
+                </div>
+                 <div class="carousel-item">
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="https://productimages.hepsiburada.net/s/777/424-600/110000650764406.jpg/format:webp" class="img-fluid">
+                                 <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
+                                <div class="tooltip-box">Sepete ekle</div>
+                            </div>
+                            <div class="card-img-overlay">Slide 9</div>
+                        </div>
+                    </div>
+                </div>
+                 <div class="carousel-item">
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="https://productimages.hepsiburada.net/s/777/424-600/110000650764406.jpg/format:webp" class="img-fluid">
+                                 <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
+                                <div class="tooltip-box">Sepete ekle</div>
+                            </div>
+                            <div class="card-img-overlay">Slide 10</div>
                         </div>
                     </div>
                 </div>
