loginPage and signupPage were created, but there is an error, it will be corrected, html, css and javascript codes have been edited.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,6 +25,9 @@
 	        <li class="nav-item">
 	          <a class="nav-link" href="#">İletişim</a>
 	        </li>
+			<li class="nav-item">
+			  <a class="nav-link" href="checkout.html">Sepetim</a> <!-- Sepete gitmek için bu bağlantıyı ekledik -->
+	       </li>
 	      </ul>
 	      <form class="d-flex ms-auto" id="search-container">
 	        <input class="form-control me-2" type="search" placeholder="Ürün, kategori ve marka ara" aria-label="Search">
@@ -62,7 +65,10 @@
 	   </div>
 	
 
-<div class="container-fluid text-center my-3">
+<div class="container-fluid text-center">
+	<div style="padding-top: 0; padding-bottom: 10px;">
+	  <h2 class="text-start ms-5" style="margin-top: -120px;">Bu Ay En Çok Satılanlar</h2>
+	</div>
     <div class="row">
         <div class="row mx-auto my-auto justify-content-center">
         <div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -72,8 +78,8 @@
                         <div class="card">
                             <div class="card-img">
                                <img src="https://productimages.hepsiburada.net/s/777/424-600/110000767460737.jpg/format:webp" class="img-fluid">
-                                <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
-                               <div class="tooltip-box">Sepete ekle</div>
+                                <div class="card-description">Apple iPhone 16 128GB Siyah</div>
+                               <div class="tooltip-box add-to-cart" data-product-id="1">Sepete ekle</div>							   
                             </div>
                         </div>
                     </div>
@@ -83,8 +89,8 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="https://productimages.hepsiburada.net/s/777/424-600/110000805731086.jpg/format:webp" class="img-fluid">
-                                 <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
-                                <div class="tooltip-box">Sepete ekle</div>
+                                 <div class="card-description">Apple MacBook Air M3 Çip 16GB 512GB SSD"</div>
+                                <div class="tooltip-box add-to-cart" data-product-id="2">Sepete ekle</div>	
                             </div>
                         </div>
                     </div>
@@ -93,11 +99,10 @@
                     <div class="col-md-2">
                         <div class="card">
                             <div class="card-img">
-                                <img src="https://productimages.hepsiburada.net/s/777/424-600/110000850441114.jpg/format:webp" class="img-fluid">
+                                <img src="https://productimages.hepsiburada.net/s/777/424-600/110000689188763.jpg/format:webp" class="img-fluid">
                                  <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
-                                <div class="tooltip-box">Sepete ekle</div>
-                            </div>
-                            <div class="card-img-overlay">Slide 3</div>
+                                <div class="tooltip-box add-to-cart" data-product-id="3">Sepete ekle</div>	
+                            </div>      
                         </div>
                     </div>
                 </div>
@@ -107,9 +112,8 @@
                             <div class="card-img">
                                 <img src="https://productimages.hepsiburada.net/s/777/424-600/110000681644448.jpg/format:webp" class="img-fluid">
                                 <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
-                                <div class="tooltip-box">Sepete ekle</div>
+								<div class="tooltip-box add-to-cart" data-product-id="4">Sepete ekle</div>	
                             </div>
-                            <div class="card-img-overlay">Slide 4</div>
                         </div>
                     </div>
                 </div>
@@ -119,9 +123,8 @@
                             <div class="card-img">
                                 <img src="https://productimages.hepsiburada.net/s/777/424-600/110000760241894.jpg/format:webp" class="img-fluid">
                                  <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
-                                <div class="tooltip-box">Sepete ekle</div>
+                                <div class="tooltip-box add-to-cart" data-product-id="5">Sepete ekle</div>	
                             </div>
-                            <div class="card-img-overlay">Slide 5</div>
                         </div>
                     </div>
                 </div>
@@ -131,9 +134,8 @@
                             <div class="card-img">
                                 <img src="https://productimages.hepsiburada.net/s/777/424-600/110000650764406.jpg/format:webp" class="img-fluid">
                                  <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
-                                <div class="tooltip-box">Sepete ekle</div>
+								 <div class="tooltip-box add-to-cart" data-product-id="6">Sepete ekle</div>	
                             </div>
-                            <div class="card-img-overlay">Slide 6</div>
                         </div>
                     </div>
                 </div>
@@ -141,7 +143,7 @@
                     <div class="col-md-2">
                         <div class="card">
                             <div class="card-img">
-                                <img src="https://productimages.hepsiburada.net/s/777/424-600/110000734789901.jpg/format:webp" class="img-fluid">
+                                <img src="https://productimages.hepsiburada.net/s/366/424-600/110000382568012.jpg/format:webp" class="img-fluid">
                                  <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
                                 <div class="tooltip-box">Sepete ekle</div>
                             </div>
@@ -153,7 +155,7 @@
                     <div class="col-md-2">
                         <div class="card">
                             <div class="card-img">
-                                <img src="https://productimages.hepsiburada.net/s/777/424-600/110000650764406.jpg/format:webp" class="img-fluid">
+                                <img src="https://productimages.hepsiburada.net/s/777/424-600/110000773544238.jpg/format:webp" class="img-fluid">
                                  <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
                                 <div class="tooltip-box">Sepete ekle</div>
                             </div>
@@ -195,8 +197,144 @@
         </div>
     </div>
     </div>
-    
 </div>
+
+
+
+<div class="container-fluid text-center">
+    <h2 class="text-start ms-5" style="margin-top: 50px;">Akıllı Telefonlar</h2>
+    <div class="row">
+        <div id="smartphonecarousel" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card-img">
+                               <img src="https://productimages.hepsiburada.net/s/777/424-600/110000767460737.jpg/format:webp" class="img-fluid">
+                               <div class="card-description">iPhone 16 128GB Siyah</div>
+                               <div class="tooltip-box">Sepete ekle</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card-img">
+                               <img src="https://productimages.hepsiburada.net/s/777/424-600/110000805731086.jpg/format:webp" class="img-fluid">
+                               <div class="card-description">Bu, ikinci kartın açıklamasıdır.</div>
+                               <div class="tooltip-box">Sepete ekle</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card-img">
+                               <img src="https://productimages.hepsiburada.net/s/777/424-600/110000689188763.jpg/format:webp" class="img-fluid">
+                               <div class="card-description">Bu, üçüncü kartın açıklamasıdır.</div>
+                               <div class="tooltip-box">Sepete ekle</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Diğer ürün kartlarını buraya ekleyebilirsiniz -->
+            </div>
+            <a class="carousel-control-prev bg-transparent w-auto" href="#smartphonecarousel" role="button" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            </a>
+            <a class="carousel-control-next bg-transparent w-auto" href="#smartphonecarousel" role="button" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            </a>
+        </div>
+    </div>
+</div>
+
+
+
+<div class="container-fluid text-center">
+    <h2 class="text-start ms-5" style="margin-top: 50px;">Laptoplar</h2>
+    <div class="row">
+        <div id="laptopCarousel" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card-img">
+                               <img src="https://productimages.hepsiburada.net/s/777/424-600/110000767460737.jpg/format:webp" class="img-fluid">
+                               <div class="card-description">Laptop 1 Açıklama</div>
+                               <div class="tooltip-box">Sepete ekle</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card-img">
+                               <img src="https://productimages.hepsiburada.net/s/777/424-600/110000805731086.jpg/format:webp" class="img-fluid">
+                               <div class="card-description">Laptop 2 Açıklama</div>
+                               <div class="tooltip-box">Sepete ekle</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card-img">
+                               <img src="https://productimages.hepsiburada.net/s/777/424-600/110000689188763.jpg/format:webp" class="img-fluid">
+                               <div class="card-description">Laptop 3 Açıklama</div>
+                               <div class="tooltip-box">Sepete ekle</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card-img">
+                               <img src="https://productimages.hepsiburada.net/s/777/424-600/110000681644448.jpg/format:webp" class="img-fluid">
+                               <div class="card-description">Laptop 4 Açıklama</div>
+                               <div class="tooltip-box">Sepete ekle</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card-img">
+                               <img src="https://productimages.hepsiburada.net/s/777/424-600/110000760241894.jpg/format:webp" class="img-fluid">
+                               <div class="card-description">Laptop 5 Açıklama</div>
+                               <div class="tooltip-box">Sepete ekle</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                 <div class="carousel-item">
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card-img">
+                               <img src="https://productimages.hepsiburada.net/s/777/424-600/110000650764406.jpg/format:webp" class="img-fluid">
+                               <div class="card-description">Laptop 6 Açıklama</div>
+                               <div class="tooltip-box">Sepete ekle</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev bg-transparent w-auto" href="#laptopCarousel" role="button" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            </a>
+            <a class="carousel-control-next bg-transparent w-auto" href="#laptopCarousel" role="button" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            </a>
+        </div>
+    </div>
+</div>
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
