--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -62,11 +62,12 @@ body {
 }
 
 .card {
-    border-radius: 35px;
+    border-radius: 25px;
     overflow: hidden;
     position: relative;
     display: inline-block;
-    width: 250px;
+    width: 225px;
+	height:410px;
 }
 
 .card-img img {
@@ -76,7 +77,7 @@ body {
 
 .tooltip-box {
     display: none;
-    position: relative;
+    position: absolute;
     bottom: 10%;
     left: 50%;
     transform: translateX(-50%);
@@ -87,6 +88,8 @@ body {
     font-size: 14px;
     z-index: 10;
     white-space: nowrap;
+	bottom:2px;
+	width:100%;
 }
 
 .card:hover .tooltip-box {
@@ -165,10 +168,3 @@ button:hover {
 .next {
     right: 10px;
 }
-
-
-
-
-
-
-
