Login Page and Signup Page problem has been fixed, now users can register and reach the main screen, Bu Ay En Çok Satılanlar has been updated on the main screen.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -100,7 +100,7 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="https://productimages.hepsiburada.net/s/777/424-600/110000689188763.jpg/format:webp" class="img-fluid">
-                                 <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
+                                 <div class="card-description">Xiaomi Robot Vacuum X20 Plus Beyaz</div>
                                 <div class="tooltip-box add-to-cart" data-product-id="3">Sepete ekle</div>	
                             </div>      
                         </div>
@@ -111,7 +111,7 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="https://productimages.hepsiburada.net/s/777/424-600/110000681644448.jpg/format:webp" class="img-fluid">
-                                <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
+                                <div class="card-description">Samsung 50Q60D 50" 126 Ekran Uydu Alıcılı 4K QLED TV</div>
 								<div class="tooltip-box add-to-cart" data-product-id="4">Sepete ekle</div>	
                             </div>
                         </div>
@@ -122,7 +122,7 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="https://productimages.hepsiburada.net/s/777/424-600/110000760241894.jpg/format:webp" class="img-fluid">
-                                 <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
+                                 <div class="card-description">Sony Playstation 5 Slim Digital Edition</div>
                                 <div class="tooltip-box add-to-cart" data-product-id="5">Sepete ekle</div>	
                             </div>
                         </div>
@@ -133,7 +133,7 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="https://productimages.hepsiburada.net/s/777/424-600/110000650764406.jpg/format:webp" class="img-fluid">
-                                 <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
+                                 <div class="card-description">Samsung Galaxy A55 128 GB 8 GB Ram Siyah</div>
 								 <div class="tooltip-box add-to-cart" data-product-id="6">Sepete ekle</div>	
                             </div>
                         </div>
@@ -144,10 +144,9 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="https://productimages.hepsiburada.net/s/366/424-600/110000382568012.jpg/format:webp" class="img-fluid">
-                                 <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
+                                 <div class="card-description">JBL Tune Flex Nc Kulakiçi Tws Kulaklık, Siyah</div>
                                 <div class="tooltip-box">Sepete ekle</div>
                             </div>
-                            <div class="card-img-overlay">Slide 7</div>
                         </div>
                     </div>
                 </div>
@@ -156,7 +155,7 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="https://productimages.hepsiburada.net/s/777/424-600/110000773544238.jpg/format:webp" class="img-fluid">
-                                 <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
+                                 <div class="card-description">Apple Watch Series 10 46MM Jet Black Aluminium Case</div>
                                 <div class="tooltip-box">Sepete ekle</div>
                             </div>
                             <div class="card-img-overlay">Slide 8</div>
@@ -167,8 +166,8 @@
                     <div class="col-md-2">
                         <div class="card">
                             <div class="card-img">
-                                <img src="https://productimages.hepsiburada.net/s/777/424-600/110000650764406.jpg/format:webp" class="img-fluid">
-                                 <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
+                                <img src="https://productimages.hepsiburada.net/s/32/424-600/10359127932978.jpg/format:webp" class="img-fluid">
+                                 <div class="card-description">Samsung VC07R302MVP/TR Toz Torbasız Elektrikli Süpürge</div>
                                 <div class="tooltip-box">Sepete ekle</div>
                             </div>
                             <div class="card-img-overlay">Slide 9</div>
@@ -179,11 +178,10 @@
                     <div class="col-md-2">
                         <div class="card">
                             <div class="card-img">
-                                <img src="https://productimages.hepsiburada.net/s/777/424-600/110000650764406.jpg/format:webp" class="img-fluid">
-                                 <div class="card-description">Bu, birinci kartın açıklamasıdır.</div>
+                                <img src="https://productimages.hepsiburada.net/s/777/424-600/110000758662501.jpg/format:webp" class="img-fluid">
+                                 <div class="card-description">Samsung 27" Odyssey G3 LS27DG302EUXUF 1 Ms 180 Hz</div>
                                 <div class="tooltip-box">Sepete ekle</div>
                             </div>
-                            <div class="card-img-overlay">Slide 10</div>
                         </div>
                     </div>
                 </div>
