--- a/src/main/resources/templates/signupPage.html
+++ b/src/main/resources/templates/signupPage.html
@@ -162,7 +162,7 @@
 
 <body>
     <section>
-        <form id="signupForm" action="/req/signup" method="post">
+        <form id="signupForm" action="/perform_signup" method="post">
             <h1>Sign Up</h1>
 
             <!-- Username Field -->
